# nauti_gazebo

./: .gitignore  README.md
auv_control/: CMakeLists.txt  package.xml
auv_control/config/: pid_gains.yaml
auv_control/include/: cmd_vel_bridge.h  joy_control.h
auv_control/launch/: joy_teleop.launch
auv_control/src/joy_ctrl/: CMakeLists.txt  joy_control.cpp
auv_control/src/nav_ctrl/: CMakeLists.txt  cmd_vel_bridge.cpp
auv_control/src/rov_ctrl/: rov_ctrl.cpp
auv_d/launch/: auv_d_gazebo.launch
auv_d/urdf/: auv_d.xacro
auv_dataset/: CMakeLists.txt  package.xml
auv_simulation/launch/: auv.launch
auv_utility/: CMakeLists.txt  package.xml
auv_visual/: CMakeLists.txt  package.xml
auv_visual/launch/: sauvc-game.launch
auv_visual/models/belgian_gate/: model.config  model.sdf
auv_visual/worlds/: lake.world
docs/: Home.md  auv_control.md  v2_control.md  v2_visual.md
v2_control/: CMakeLists.txt  package.xml
v2_control/include/: cmd_vel_bridge.h
v2_control/launch/: joy_teleop.launch  sims.launch
v2_control/scripts/vision/: dwn_vision.py  front_vision.py
v2_control/src/common/: README.md  uwv.cpp
v2_control/src/joy_ctrl/: README.md  joy_control.cpp
v2_control/src/nav_ctrl/: cmd_vel_bridge.cpp
v2_control/src/rov_ctrl/: README.md  config_ROV.h  rov_ctrl.cpp
v2_dataset/: package.xml
v2_dataset/imgs/: dso_dataset  result.txt
v2_utility/: package.xml
v2_utility/launch/: get_images.launch
v2_visual/: package.xml
v2_visual/config/: sauvc-game.rviz
v2_visual/launch/: nautiquest.launch  pool-display.launch  sauvc-game.launch  swimming-pool.launch
v2_visual/meshes/: base_link.STL
v2_visual/models/belgian_gate/: belgian_gate.sdf
v2_visual/models/herkules_ship_wreck/: model.sdf
v2_visual/models/swimming_pool/: model.config  model.sdf
v2_visual/models/swimming_pool/materials/scripts/: swimming_pool.material
v2_visual/models/traffic_cone/: model.config  model.sdf
v2_visual/urdf/: URDF_Simple_Assembly.urdf  auv_v2.xacro  task4_ball.xacro
v2_visual/worlds/: herkules_ship_wreck.world  lake.world  sauvc_pool.world  ship_wreck.world  swimming_pool.world
